# oncall-netops

./: .env.example  .gitignore  Makefile  README.md  graph.py  graph_state_shemas.py  langgraph.json  pyproject.toml  requirements.txt
agents/: __init__.py  agent_coordinator.py  agent_device_health.py  agent_interface_actions.py  agent_isis.py  agent_log_analyzer.py  agent_network_interface.py  agent_routing.py  prompts.py
grafana-to-langgraph-proxy/: Dockerfile  README.md  app.py  docker-compose.yml
tools/pyats/: pyats_health_tools.py  pyats_interface_oper_tools.py  pyats_interface_status_tools.py  pyats_inventory_tools.py  pyats_isis_tools.py  pyats_routing_tools.py
utils/: __init__.py  generate_http_client.sh  set_pythonpath.sh  utils.py  validate_env_vars.sh
