[project]
name = "oncall-netops"
version = "0.1.0"
description = "On-call NetOps automation using LangGraph and PyATS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai",
    "langgraph-cli[inmem]",
    "langgraph",
    "langchain-core",
    "ipython",
    "pillow",
    "langgraph-api==0.0.26",
    "pyats-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "utils"]
include = [
    "graph.py",
    "graph_state_shemas.py",
    "langgraph.json",
    "pyats_server.json"
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
pyats-client = { path = "pyats_client" }
